[build-system]
requires = ["setuptools>=61.0", "python-ldap>=3.0.0", "six"]
build-backend = "setuptools.build_meta"

[project]
name = "pytacs_plus"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv1.2 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bubbaandy89/pytacs"
"Bug Tracker" = "https://github.com/bubbaandy89/pytacs/issues"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--import-mode=importlib",
    "--cov-config=setup.cfg",
    "--cov-report=term-missing",
    "--cov-report=html:documentation/coverage",
    "--cov-report=xml:documentation/coverage/coverage.xml",
]
pythonpath = "src"
