[build-system]
requires = ["setuptools>=61.0", "tox"]
build-backend = "setuptools.build_meta"

[project]
name = "pytacs_plus"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv1.2 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bubbaandy89/pytacs"
"Bug Tracker" = "https://github.com/bubbaandy89/pytacs/issues"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--import-mode=importlib",
    "--cov=pytacs",
    "--cov-config=setup.cfg",
    "--cov-report=term-missing",
    "--cov-report=html:coverage.html",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--ignore=test/*",
]
pythonpath = "src"

[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["pytacs"]

# required for compatibility with black:
profile = "black"

# To maintain consistency with other settings
line_length = 100

[tool.mypy]
# See https://mypy.readthedocs.io/en/latest/config_file.html for more mypy options.

plugins = []

# Enables the type-checker on the interior of functions without type annotations.
check_untyped_defs = true

# Displaying specific error codes makes it easier to silence specific errors
# See also https://mypy.readthedocs.io/en/latest/error_codes.html
show_error_codes = true

# Show source code snippets and location markers in error messages
pretty = true

# Suppresses errors about packages which do not implement type-hint sharing.
# See also https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true
